# seocho

./: .AGENTS.md  .PLANS.md  .dockerignore  .env.example  .gitignore  .gitmodules  .mailmap  AGENTS.md  AGENT_GUIDE.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SECURITY.md  TUTORIAL.md  config.yaml.example  docker-compose.dev.yml  docker-compose.instance.yml  docker-compose.memory.yml  docker-compose.opik.yml  docker-compose.tls-enterprise.yml  docker-compose.tutorials.yml  docker-compose.yml  fix_indent.py  llms.txt  manage.sh  neodash_dashboard.json  page@543d3e98dc85f5f736cca9f6a38f5aa3.webm  page@a8643557a73d5e91f6cc5d47637b3bb8.webm  patch_reads3.py  patch_reads4.py  patch_script10.py  patch_script11.py  (+11 more)
.beads/: .gitignore  README.md  beads.db-shm  beads.db-wal  config.yaml  issues.jsonl  metadata.json  sync-state.json
.claude/: settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  README.md  labels.json  pull_request_template.md
.jules/: bolt.md  palette.md
.serena/: project.yml
app/: Dockerfile  package-lock.json  package.json
chat/: Dockerfile  app.py  phoenix_agent_demo.py  requirements.txt
config/: recipe_glossary.yml
daemon/: activity.json
dataset/: all_slices.csv  manifest.json
demos/: agent_tracing_demo.py  data_mesh_mock.py  datahub_fibo_ingest.py  demo_fibo_metadata.py  neo4j_tracing_demo.py
docs/: ADD_PLAYBOOK.md  AGENT_DESIGN_SPECS.md  AGENT_DEVELOPMENT.md  AGENT_SERVER_REFACTOR_PLAN.md  APPLY_YOUR_DATA.md  ARCHITECTURE.md  ARCHITECTURE_HEALTH.md  ARCHITECTURE_REVIEW.md  BASELINE_INSTRUCTIONS.md  BEADS_OPERATING_MODEL.md  BEGINNER_GUIDE.md  BEGINNER_PIPELINES_DEMO.md  BENCHMARKS.md  CODING_STYLE.md  CONNECTORS.md  CONTEXT_GRAPH_BLUEPRINT.md  DEVELOPER_INPUT_CONVENTIONS.md  EMBEDDED_GIT_CLONE_POLICY.md  EXCHANGE_CALIBRATED_AGENT_MEMORY_DATASET.md  EXPERIMENTS.md  FILES_AND_ARTIFACTS.md  GASTOWN_COORDINATION.md  GITHUB_AUTOMATION.md  GRAPH_MEMORY_API.md  GRAPH_MODEL_STRATEGY.md  GRAPH_RAG_AGENT_HANDOFF_SPEC.md  INDEXING_DESIGN_SPECS.md  INTERNAL_CLASS_DESIGN.md  ISSUE_TASK_SYSTEM.md  KNOWN_ISSUE.md  LANCEDB_MIGRATION.md  MAINTAINER_ARCHITECTURE_NOTES.md  MODULE_OWNERSHIP_MAP.md  NEO4J_TLS_OBSERVABILITY.md  OKX_AGENT_MEMORY_SYSTEM_SPEC.md  OKX_AI_INFRA_ENGINEERING_EVIDENCE.md  OKX_CRITICAL_AGENT_MEMORY_SCENARIOS.md  ONTOLOGY_RUN_CONTEXT_STRATEGY.md  OPEN_SOURCE_PLAYBOOK.md  PHILOSOPHY.md  (+27 more)
engine/: README.md  datahub_ingestion_recipe.yml
evaluation/: Dockerfile  app.py  neo4j_trace_logger.py  requirements.txt  requirements.txt.bak  server.py
examples/: Dockerfile.tutorials  README.md  bring_your_data.ipynb  combination_test.py  e2e_evaluation.py  fibo_module_metrics.py  finder_fibo_module_impact.ipynb  finder_lance_vector_vs_graph_rag.ipynb  finder_rdf_vs_lpg_evaluation.ipynb  lance_graph_store.py  lpg_metrics.py  output_paths.py  private_opik_workflow.ipynb  quickstart.ipynb  rdf_lpg_comparison.py  requirements-tutorials.txt  tutorial_01_vanilla_llm.ipynb  tutorial_02_agent_enhancement.ipynb  tutorial_03_ontology_indexing.ipynb  tutorial_slides.html  workbench_matrix.py
extraction/: Dockerfile  _runtime_alias.py  agent_factory.py  agent_readiness.py  agent_server.py  agents.py  agents_runtime.py  api.py  collector.py  config.py  data_source.py  database_manager.py  debate.py  deduplicator.py  dependencies.py  entrypoint.sh  exceptions.py  extractor.py  fulltext_index.py  graph_connector.py  graph_loader.py  ingest_finance_corpus.py  ingest_finder.py  linker.py  main.py  manage_databases.py  memory_service.py  metadata.py  middleware.py  multi_db_loader.py  neo4j_to_datahub.yml  ontology_control_plane_api.py  ontology_control_plane_store.py  ontology_hints.py  ontology_hints_builder.py  ontology_prompt_bridge.py  pipeline.py  platform_agents.py  policy.py  prompt_history.json  (+27 more)
graph/: README.md
notebooks/: README.md  agentwithext.ipynb  debug_agent.ipynb
outputs/: data_mesh_integration.md
runtime/: __init__.py  agent_readiness.py  agent_server.py  agent_state.py  audit.py  identity.py  memory_service.py  middleware.py  ontology_registry.py  policy.py  public_memory_api.py  runtime_ingest.py  server_runtime.py
scripts/: beads-path-guard.sh  build_cik_table.py  check-beads-path.sh  context-event.sh  datahub-bootstrap.sh  gt-doctor.sh  gt-land.sh  land.sh  ops-check.sh  task-context-trail.sh
scripts/profiling/agent_memory_rust/: Cargo.toml  README.md
scripts/profiling/agent_memory_rust/src/: main.rs
scripts/profiling/neo4rs_probe/: Cargo.toml
scripts/profiling/neo4rs_probe/src/: main.rs
semantic/: agent.py  cdc.py  main.py  neo4j_client.py  requirements.txt
seocho/: AGENTS.md  README.md  __init__.py  agent_config.py  agent_design.py  agent_factory_cache.py  agents.py  agents_runtime.py  api.py  benchmarking.py  budget.py  cli.py  client.py  client_artifacts.py  client_bundle.py  client_remote.py  evaluation.py  events.py  exceptions.py  experiment.py  file_indexer.py  governance.py  graph_store.py  http_runtime.py  http_transport.py  indexing.py  indexing_design.py  llm_backend.py  local.py  local_engine.py  models.py  observability.py  ontology.py  ontology_artifacts.py  ontology_context.py  ontology_control_plane.py  ontology_governance.py  ontology_run_context.py  ontology_serialization.py  prompt_strategy.py  (+11 more)
seocho-core/: Cargo.toml  pyproject.toml
seocho-core/python/seocho_core/: __init__.py  _fallback.py
seocho-core/src/: cosine.rs  lib.rs  rules.rs
teaching-resource/: .env.example  README.md  chapter-00-setup.ipynb  chapter-01-knowledge-graph-indexing.md  chapter-03-text2cypher.md  chapter-04-routing-agent-slides.html  chapter-05-debate-pool.ipynb  colab_bootstrap.md  seocho_finder_fibo_teaching.html
tests/: test_cypher_ident.py  test_fibo_snapshot_compiler.py  test_parity_harness.py
tutorials/: README.md  ontology_guardrail_before_after.ipynb
videos/: page@8179619e6504bffc3039727d870778e7.webm  page@ebebf3fa625ffa3754187d820359dc50.webm  (+1 more)
website/: .gitignore  (+3 more)
(+1362 files in other folders)
