[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "seocho-core"
version = "0.1.0"
description = "Native acceleration for seocho — cosine similarity and rule inference"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "seocho_core._native"
