[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "seocho-core"
version = "0.1.0"
description = "Native acceleration for seocho — cosine similarity and rule inference"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
# Pure-Rust single-module layout: the cdylib IS the importable `seocho_core`
# (pymodule fn in src/lib.rs is `seocho_core`). No python-source wrapper — there
# is no Python-side surface (three leaf functions), so a `python/seocho_core/
# __init__.py` re-export hop would be dead config. Call sites import top-level
# `seocho_core` directly (seocho/index/linker.py, seocho/rules.py).
module-name = "seocho_core"
