[package]
name = "seocho-agent-memory-rust-probe"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
